base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stack-index
  labels:
    app: stack-index
spec:
  selector:
    app: stack-index
  ports:
    - name: http
      port: 80
      targetPort: 80
